--- a/ProgettoPW2017/.project
+++ b/ProgettoPW2017/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProgettoPW2017</name>
+	<name>ProgettoIS2017</name>
 	<comment></comment>
 	<projects>
 	</projects>
